--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 * {
     padding: 0;
@@ -30,20 +31,35 @@ form {
     padding: 30px;
 }
 
-form > * {
+form div > * {
     display: block;
     font-size: 1em;
+    margin: 0 auto 20px auto;
 }
 
-form input {
-    margin: 0 0 30px 0;
+form label {
+    height: 0px;
+    overflow: hidden;
+}
+
+form input,
+form select {
     padding: 3px;
     border-bottom: 1px solid grey;
+}
+
+form select {
+    border: 0;
+    box-shadow: 0 0 3px 1px grey;
+    padding: 8px 0;
 }
 
 form button {
     background: #2525ff;
     color: white;
+    display: block;
+    margin: 30px auto 0 auto;
+    font-size: 1em;
     padding: 10px 20px;
     border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -57,5 +73,3 @@ footer > * {
     color: #aaaaaa;
     font-size: 1.1em;
 }
-
-
