Clean up main branch

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,75 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
-
-* {
-    padding: 0;
-    margin: 0;
-    border: 0;
-    box-sizing: border-box;
-}
-
-html, body {
-  height: 100vh;
-  background: #fdfdfd;
-}
-
-body {
-    height: fit-content;
-}
-
-body > * {
-    width: fit-content;
-    margin: 0 auto;
-}
-
-h1 {
-    margin: 50px auto;
-    color: #333333;
-}
-
-form {
-    box-shadow: 0 0 4px 1px grey;
-    padding: 30px;
-}
-
-form div > * {
-    display: block;
-    font-size: 1em;
-    margin: 0 auto 20px auto;
-}
-
-form label {
-    height: 0px;
-    overflow: hidden;
-}
-
-form input,
-form select {
-    padding: 3px;
-    border-bottom: 1px solid grey;
-}
-
-form select {
-    border: 0;
-    box-shadow: 0 0 3px 1px grey;
-    padding: 8px 0;
-}
-
-form button {
-    background: #2525ff;
-    color: white;
-    display: block;
-    margin: 30px auto 0 auto;
-    font-size: 1em;
-    padding: 10px 20px;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-}
-
-footer > * {
-    margin: 30px 0;
-    color: #aaaaaa;
-    font-size: 1.1em;
-}
+/*index.css*/
